clang/test/BSC/Negative/Generic/StructAndFunction/redefinition_a_owned_struct/redefinition_a_owned_struct_1.cbs
// RUN: %clang_cc1 %s -I %S/../../../../../../../libcbs/src/vec/ \
// RUN: -I %S/../../../../../../../libcbs/src/raw_vec/ \
// RUN: -I %S/../../../../../../../libcbs/src/bishengc_safety/ \
// RUN: -I %S/../../../../../../../build/lib/clang/15.0.4/include/ \
// RUN: -I %S/../../../../../../../build/lib/clang/15.0.4/include/bsc_include/ \
// RUN: -internal-isystem  %S/../../../../../../../lib/Headers/bsc_include \
// RUN: -internal-externc-isystem /usr/include/x86_64-linux-gnu \
// RUN: -internal-externc-isystem /include -internal-externc-isystem /usr/include -verify 

#include"vec.hbs"

long times(long x, const Vec<long> *borrow v) {     // expected-note{{previous definition is here}}
    long ret = 0;
    Vec<long> x = *v;   // expected-error{{redefinition of 'x' with a different type: 'owned Vec<long>' vs 'long'}}  expected-error{{borrow type does not allow move ownership}}

    return x;
}